--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -2,7 +2,11 @@
   background-image: url("./images/header.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100vw; }
+  background-size: 100vw;
+}
 
-nav a {
-  color: black; }
+nav {
+  a {
+    color: black;
+  }
+}
