Basic layout of the Gallery section

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
 @import "./scss/sections/header";
 @import "./scss/sections/about-us";
 @import "./scss/sections/services";
+@import "./scss/sections/gallery";
