Basic layout of the Subscribe section

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,14 @@ nav a {
 
 .gallery {
   background-color: #ffe92f; }
+
+.subscribe {
+  background-color: white;
+  background-image: url("./images/subscribe.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 70% 50%;
+  min-height: 500px; }
+
+.form-control {
+  width: 100% !important; }
