--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,4 @@
 @import "./scss/sections/about-us";
 @import "./scss/sections/services";
 @import "./scss/sections/gallery";
+@import "./scss/sections/subscribe";
