Basic layout of Blog section

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,4 @@
 @import "./scss/sections/services";
 @import "./scss/sections/gallery";
 @import "./scss/sections/subscribe";
+@import "./scss/sections/blog";
