--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,37 @@ nav a {
 
 .form-control {
   width: 100% !important; }
+
+.blog {
+  background-color: #b07bf7; }
+
+.blog-post {
+  height: 300px; }
+
+.blog-post {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.blog-post__date {
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  width: 80px;
+  height: 80px; }
+
+.blog-post__title {
+  z-index: 2; }
+
+.blog-post__gradient {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0);
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(64%, rgba(0, 0, 0, 0)), color-stop(95%, black), color-stop(100%, black));
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 ); }
