Basic Contact section layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,4 @@
 @import "./scss/sections/gallery";
 @import "./scss/sections/subscribe";
 @import "./scss/sections/blog";
+@import "./scss/sections/contact";
