--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,16 @@ nav a {
   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 64%, black 95%, black 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 ); }
+
+.contact {
+  background-image: url("./images/contact.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+  .contact input,
+  .contact textarea {
+    background-color: rgba(0, 195, 195, 0.5) !important;
+    color: white; }
+    .contact input::placeholder,
+    .contact textarea::placeholder {
+      color: white; }
