Basic Footer layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,4 @@
 @import "./scss/sections/subscribe";
 @import "./scss/sections/blog";
 @import "./scss/sections/contact";
+@import "./scss/sections/footer";
