--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,6 @@ nav a {
     .contact input::placeholder,
     .contact textarea::placeholder {
       color: white; }
+
+.footer {
+  background-color: #252525; }
