--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -8,5 +8,15 @@
 nav {
   a {
     color: black;
+    font-family: "Raleway";
   }
+}
+
+.logo,
+.logo-small {
+  font-family: "Pacifico";
+}
+
+.navbar-brand {
+  font-size: 50px;
 }
