--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./scss/fonts";
+@import "./scss/holistic";
 @import "./scss/sections/header";
 @import "./scss/sections/about-us";
 @import "./scss/sections/services";
