--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,3 +1,16 @@
 .footer {
   background-color: #252525;
+
+  span {
+    font-family: "Raleway Thin";
+  }
+}
+
+.logo-small {
+  font-size: 25px;
+}
+
+span.red {
+  color: #fe0051;
+  font-family: "Raleway Bold";
 }
