--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -3,6 +3,11 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100vw;
+
+  button {
+    background-color: #ff5f33;
+    width: 200px;
+  }
 }
 
 nav {
