--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -11,6 +11,45 @@
 }
 
 nav {
+  background: rgba(255, 255, 255, 1);
+  background: -moz-linear-gradient(
+    top,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(246, 246, 246, 0.53) 47%,
+    rgba(237, 237, 237, 0) 100%
+  );
+  background: -webkit-gradient(
+    left top,
+    left bottom,
+    color-stop(0%, rgba(255, 255, 255, 1)),
+    color-stop(47%, rgba(246, 246, 246, 0.53)),
+    color-stop(100%, rgba(237, 237, 237, 0))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(246, 246, 246, 0.53) 47%,
+    rgba(237, 237, 237, 0) 100%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(246, 246, 246, 0.53) 47%,
+    rgba(237, 237, 237, 0) 100%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(246, 246, 246, 0.53) 47%,
+    rgba(237, 237, 237, 0) 100%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(246, 246, 246, 0.53) 47%,
+    rgba(237, 237, 237, 0) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
   a {
     color: black;
     font-family: "Raleway";
@@ -24,4 +63,8 @@ nav {
 
 .navbar-brand {
   font-size: 50px;
+}
+
+.compensator {
+  height: 180px;
 }
