--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -2,7 +2,7 @@
   background-image: url("./images/header.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100vw;
+  background-size: 110vw;
 
   button {
     background-color: #ff5f33;
@@ -11,48 +11,9 @@
 }
 
 nav {
-  background: rgba(255, 255, 255, 1);
-  background: -moz-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(246, 246, 246, 0.53) 47%,
-    rgba(237, 237, 237, 0) 100%
-  );
-  background: -webkit-gradient(
-    left top,
-    left bottom,
-    color-stop(0%, rgba(255, 255, 255, 1)),
-    color-stop(47%, rgba(246, 246, 246, 0.53)),
-    color-stop(100%, rgba(237, 237, 237, 0))
-  );
-  background: -webkit-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(246, 246, 246, 0.53) 47%,
-    rgba(237, 237, 237, 0) 100%
-  );
-  background: -o-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(246, 246, 246, 0.53) 47%,
-    rgba(237, 237, 237, 0) 100%
-  );
-  background: -ms-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(246, 246, 246, 0.53) 47%,
-    rgba(237, 237, 237, 0) 100%
-  );
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(246, 246, 246, 0.53) 47%,
-    rgba(237, 237, 237, 0) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
   a {
     color: black;
-    font-family: "Raleway";
+    font-family: "Raleway Regular";
   }
 }
 
